force-app/main/default/objects/OrderCart__c/OrderCart__c.object-meta.xml
<CustomObject>
    <label>OrderCart</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>OrderCart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderCarts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>