force-app/main/default/objects/OrderCart__c/fields/Contract_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Item__c</fullName>
    <label>Contract Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>