force-app/main/default/objects/OrderCart__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <label>Contract Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>