force-app/main/default/objects/OrderCart__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Currency Iso Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>