force-app/main/default/objects/OrderCart__c/fields/Item_Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>Item_Qty_Available__c</fullName>
    <label>Item Qty Available</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>