force-app/main/default/objects/OrderCart__c/fields/PMC_CPQ_PO__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PO__c</fullName>
    <label>PMC_CPQ_PO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>