force-app/main/default/objects/OrderCart__c/fields/PMC_CPQ_PurchaseOrderDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PurchaseOrderDate__c</fullName>
    <label>PMC_CPQ_PurchaseOrderDate</label>
    <type>Date</type>
</CustomField>