force-app/main/default/objects/OrderCart__c/fields/PMC_CPQ_SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldToAccount__c</fullName>
    <label>PMC_CPQ_SoldToAccount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>