force-app/main/default/objects/OrderCart__c/fields/SBQQ_Opportunity2__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Opportunity2__c</fullName>
    <label>SBQQ_Opportunity2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>