force-app/main/default/objects/OrderCart__c/fields/SBQQ_PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_PaymentTerm__c</fullName>
    <label>SBQQ__PaymentTerm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>