force-app/main/default/objects/OrderCart__c/fields/SBQQ_PriceBook__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_PriceBook__c</fullName>
    <label>SBQQ_PriceBook</label>
    <length>100</length>
    <type>Text</type>
</CustomField>