force-app/main/default/objects/OrderCart__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>WebStore</referenceTo>
    <relationshipLabel>OrderCarts</relationshipLabel>
    <relationshipName>OrderCarts</relationshipName>
    <type>Lookup</type>
</CustomField>